2000-03-25  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_LINK_IFELSE, AC_COMPILE_IFELSE): New macros.
	(AC_TRY_LINK, AC_TRY_COMPILE): Use them.
	(AC_CHECK_MEMBER, AC_COMPILE_CHECK, AC_CHECK_DECL,
	_AC_CHECK_TYPE_NEW): Adjust.
	* acspecific.m4 (AC_DECL_YYTEXT, AC_PATH_XTRA): Adjust.

2000-03-23  Steven G. Johnson <stevenj@alum.mit.edu>

	* acspecific.m4 (AC_F77_NAME_MANGLING): Need to use
	AC_F77_LIBRARY_LDFLAGS when linking C and Fortran code.

2000-03-23  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_LANG_PROGRAM, AC_LANG_PROGRAM(C),
	AC_LANG_PROGRAM(C++), AC_LANG_PROGRAM(FORTRAN77)): New macros.
	(AC_TRY_COMPILE, AC_TRY_LINK): Use them.

2000-03-23  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INIT_PARSE_ARGS): Support --help={long, short,
	recursive}.
	(_AC_INIT_HELP): Propagate --help=recursive to CONFIG_SUBDIRS.
	Code stolen from...
	(AC_OUTPUT_SUBDIRS): s/ac_config_dir/ac_subdir/g.

2000-03-23  Lars J. Aas  <larsa@sim.no>

	* libm4.m4 (m4_do): New macro.

2000-03-21  Akim Demaille  <akim@epita.fr>

	Provide a language independent means to generate language specific
	programs.

	* acgeneral.m4 (_AC_LANG_DISPATCH): New macro.
	(AC_LANG): Use it.
	(AC_LANG_SOURCE, AC_LANG_SOURCE(C), AC_LANG_SOURCE(C++),
	AC_LANG_SOURCE(FORTRAN77)): New macros.
	(AC_TRY_COMPILER, AC_EGREP_CPP, AC_TRY_RUN_NATIVE): Use
	AC_LANG_SOURCE.

2000-03-21  Akim Demaille  <akim@epita.fr>

	Fix a bug: some macros (e.g., AC_REVISION, AC_COPYRIGHT etc.) can
	be used before AC_INIT, but they do require it.  But then, the
	argument of the explicit AC_INIT call is lost.

	* acgeneral.m4 (AC_CONFIG_SRCDIR): New macro.
	(_AC_INIT_SRCDIR): Adjust.
	(_AC_INIT): Pass your argument to AC_CONFIG_SRCDIR.

2000-03-21  Akim Demaille  <akim@epita.fr>

	* tests/semantics.m4 (AC_PATH_PROG, AC_PATH_PROGS): New tests.

2000-03-21  Akim Demaille  <akim@epita.fr>

	Start the language support overhaul: Introduce AC_LANG().

	* acgeneral.m4 (AC_LANG): Renamed as _AC_LANG_CURRENT.